
[workspace]
members = ["shared", "client", "server"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kirill Lykov"]
repository = "https://github.com/tobedone"
license = "MIT"
edition = "2021"

[workspace.dependencies]
atty = "0.2.11"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
pem = "1.1.1"
anyhow = "1.0.98"
bytes = { version = "1.10" }
thiserror = "1.0.58"
directories-next = "2"
tokio = { version = "1.45", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
tokio-util = { version = "*" }
rustls = { version = "0.23.27", features = ["std"], default-features = false }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-futures = { version = "0.2.0", default-features = false, features = [
    "std-future",
] }
rand = "0.8"
url = "2"
# versions from the agave
quinn = { package = "quinn", version = "=0.11.7" }
quinn-proto = { package = "quinn-proto", version = "=0.11.11" }
rcgen = "0.12.0"
solana-streamer = { version = "2.2" }
solana-sdk = { version = "2.2" }
futures = "0.3.28"
rand_chacha = "0.3.1"
itertools = { version = "*" }
bincode = "1.3.3"
serde_json = { version = "*" }
log = { version = "*" }
smallvec = "1.13.2"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }

[profile.release]
debug = 2

#[build]
#rustflags = ["-C", "force-frame-pointers=yes"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
