[package]
name = "solana_mock_client"
resolver = "2"

authors = ["Kirill Lykov", "Alex Pyattaev"]
repository = "https://github.com/tobedone"
license = "MIT"
edition = "2021"

[dependencies]
bytemuck = {version="1.24.0", features=["derive"]}
solana-pubkey = "4.*"
solana-keypair = "3.*"
solana-packet = "4.*"
solana-signature = "3.*"
atty = "0.2.11"
clap = { version = "4", features = ["derive", "cargo"] }
chrono = { version = "0.4.41", features = ["clock", "now"] }
anyhow = "1.0.98"
bytes = { version = "1.10" }
thiserror = "1.0.58"
tokio = { version = "1.45", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
tokio-util = { version = "*" }
rustls = { version = "0.23.27", features = ["std"], default-features = false }
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
rand = "0.8"
# versions from the agave
quinn = { package = "quinn", version = "=0.11.9" }
#quinn = { package = "quinn", git = "https://github.com/quinn-rs/quinn.git", rev = "d8302dfaeb7a137fb29d827837b29a613340a7c6" }
quinn-proto = { package = "quinn-proto", version = "=0.11.13" }
#quinn-proto = { package = "quinn-proto", git = "https://github.com/quinn-rs/quinn.git", rev = "8936cc059c66c6010aeee873a996f82d3fbbc389" }
rand_chacha = "0.3.1"
serde_json = { version = "*" }
log = { version = "*" }
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }
solana-tls-utils = {version="3.1.7", features=["agave-unstable-api"]}
[profile.release]
debug = 2

#[build]
#rustflags = ["-C", "force-frame-pointers=yes"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
