[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
server = { path = "../server" }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
csv = "1.1"
shared = { path = "../shared" }
