[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pem = { workspace = true }
quinn-proto = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
x509-parser = { workspace = true }
shared = { path = "../shared" }
